--- a/TMFrontend/src/app/app.component.scss
+++ b/TMFrontend/src/app/app.component.scss
@@ -51,3 +51,29 @@ img {
   background: $primary-color;
   padding: 0px;
 }
+
+.logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 30px 16px 0;
+  float: left
+}
+
+.sider-menu {
+  height: 100vh;
+}
+
+.inner-layout {
+  padding: 0 24px 24px;
+}
+
+nz-breadcrumb {
+  margin: 16px 0;
+}
+
+nz-content {
+  background: #fff;
+  padding: 24px;
+  min-height: 280px;
+}
